Generate base of bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,30 @@ project(PacketHandling)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# Add pybind11 submodule or external directory
+add_subdirectory(extern/pybind11)
+
+# Set up the source files and headers for the PacketHandling library
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
 file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS include/*.h)
+
+# Create the static library for PacketHandling
 add_library(PacketHandling STATIC ${SOURCES} ${HEADERS})
 
-# Specify the include directory for consumers
+# Specify the include directory for consumers of PacketHandling
 target_include_directories(PacketHandling PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# Add the pybind11 bindings module
+pybind11_add_module(pybindings bindings/pybindings.cpp)
+
+# Link the PacketHandling library to the pybindings module
+target_link_libraries(pybindings PRIVATE PacketHandling)
+
+# Specify the include directories for the pybindings module
+target_include_directories(pybindings PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# Find Python and pybind11 (if not already done in `add_subdirectory`)
+find_package(Python3 REQUIRED)
+
+# Ensure proper output settings for the Python shared library (.pyd on Windows)
+set_target_properties(pybindings PROPERTIES PREFIX "" SUFFIX ".pyd")# For Windows .pyd
