--- a/.gitignore
+++ b/.gitignore
@@ -563,3 +563,4 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/clion+all,cmake,platformio,visualstudiocode,visualstudio,c++
 build/
+extern/
